parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> topLevelDecls
Rule 2     topLevelDecls -> topLevelDecls topLevelDecl eos
Rule 3     topLevelDecls -> topLevelDecl eos
Rule 4     topLevelDecl -> declaration
Rule 5     declaration -> varDecl
Rule 6     varDecl -> identifierList DECL_ASGN expressionList
Rule 7     identifierList -> identifierList , IDENTIFIER
Rule 8     identifierList -> IDENTIFIER
Rule 9     expressionList -> expressionList , expression
Rule 10    expressionList -> expression
Rule 11    statementList -> statementList eos statement
Rule 12    statementList -> statement
Rule 13    block -> { statementList }
Rule 14    statement -> block
Rule 15    statement -> simpleStmt
Rule 16    statement -> declaration
Rule 17    simpleStmt -> assignment
Rule 18    simpleStmt -> expressionStmt
Rule 19    expressionStmt -> expression
Rule 20    assignment -> expressionList assign_op expressionList
Rule 21    assign_op -> SHR_ASGN  [precedence=right, level=8]
Rule 22    assign_op -> SHL_ASGN  [precedence=right, level=8]
Rule 23    assign_op -> MOD_ASGN  [precedence=right, level=8]
Rule 24    assign_op -> DIV_ASGN  [precedence=right, level=8]
Rule 25    assign_op -> OR_ASGN  [precedence=right, level=8]
Rule 26    assign_op -> AND_ASGN  [precedence=right, level=8]
Rule 27    assign_op -> STAR_ASGN  [precedence=right, level=8]
Rule 28    assign_op -> XOR_ASGN  [precedence=right, level=8]
Rule 29    assign_op -> MINUS_ASGN  [precedence=right, level=8]
Rule 30    assign_op -> PLUS_ASGN  [precedence=right, level=8]
Rule 31    assign_op -> ASSIGN  [precedence=right, level=8]
Rule 32    expression -> expression BINARY_OP unaryExpr
Rule 33    expression -> unaryExpr
Rule 34    unaryExpr -> UNARY_OP unaryExpr  [precedence=right, level=7]
Rule 35    unaryExpr -> primaryExpr
Rule 36    primaryExpr -> conversion
Rule 37    primaryExpr -> operand
Rule 38    operand -> ( expression )
Rule 39    operand -> operandName
Rule 40    operand -> literal
Rule 41    operandName -> qualifiedIdent
Rule 42    operandName -> IDENTIFIER
Rule 43    literal -> basicLit
Rule 44    conversion -> type_ ( expression )
Rule 45    type_ -> qualifiedIdent
Rule 46    type_ -> typeName
Rule 47    qualifiedIdent -> IDENTIFIER . IDENTIFIER
Rule 48    typeName -> numericType
Rule 49    typeName -> STRING
Rule 50    typeName -> BOOL
Rule 51    typeName -> RUNE
Rule 52    numericType -> F32
Rule 53    numericType -> F64
Rule 54    numericType -> ISIZE
Rule 55    numericType -> I64
Rule 56    numericType -> I32
Rule 57    numericType -> I16
Rule 58    numericType -> I8
Rule 59    numericType -> USIZE
Rule 60    numericType -> U64
Rule 61    numericType -> U32
Rule 62    numericType -> U16
Rule 63    numericType -> U8
Rule 64    basicLit -> INT_LIT
Rule 65    basicLit -> FLOAT_LIT
Rule 66    basicLit -> DECIMAL_LIT EXPONENT
Rule 67    basicLit -> FLOAT_LIT EXPONENT
Rule 68    basicLit -> FALSE
Rule 69    basicLit -> TRUE
Rule 70    basicLit -> RUNE_LIT
Rule 71    basicLit -> STRING_LIT
Rule 72    FLOAT_LIT -> . DECIMAL_LIT
Rule 73    FLOAT_LIT -> DECIMAL_LIT .
Rule 74    FLOAT_LIT -> DECIMAL_LIT . DECIMAL_LIT
Rule 75    INT_LIT -> HEX_LIT
Rule 76    INT_LIT -> OCTAL_LIT
Rule 77    INT_LIT -> BINARY_LIT
Rule 78    INT_LIT -> DECIMAL_LIT
Rule 79    eos -> eos NEWL
Rule 80    eos -> NEWL
Rule 81    eos -> eos ;
Rule 82    eos -> ;
Rule 83    BINARY_OP -> MUL_OP
Rule 84    BINARY_OP -> ADD_OP
Rule 85    BINARY_OP -> REL_OP
Rule 86    BINARY_OP -> LOGIC_AND  [precedence=left, level=2]
Rule 87    BINARY_OP -> LOGIC_OR  [precedence=left, level=1]
Rule 88    REL_OP -> GE  [precedence=left, level=3]
Rule 89    REL_OP -> GT  [precedence=left, level=3]
Rule 90    REL_OP -> LE  [precedence=left, level=3]
Rule 91    REL_OP -> LT  [precedence=left, level=3]
Rule 92    REL_OP -> NE  [precedence=left, level=3]
Rule 93    REL_OP -> EQ  [precedence=left, level=3]
Rule 94    ADD_OP -> XOR  [precedence=left, level=4]
Rule 95    ADD_OP -> OR  [precedence=left, level=4]
Rule 96    ADD_OP -> MINUS  [precedence=left, level=4]
Rule 97    ADD_OP -> PLUS  [precedence=left, level=4]
Rule 98    MUL_OP -> SHR  [precedence=left, level=5]
Rule 99    MUL_OP -> SHL  [precedence=left, level=5]
Rule 100   MUL_OP -> AND  [precedence=left, level=5]
Rule 101   MUL_OP -> MOD  [precedence=left, level=5]
Rule 102   MUL_OP -> DIV  [precedence=left, level=5]
Rule 103   MUL_OP -> STAR  [precedence=left, level=5]
Rule 104   UNARY_OP -> AND  [precedence=left, level=5]
Rule 105   UNARY_OP -> EXCLM
Rule 106   UNARY_OP -> MINUS  [precedence=left, level=4]

Unused terminals:

    FN
    STATIC
    IN
    MAP
    FOR
    MINUS_MINUS
    ELSE
    AS
    RETURN
    BREAK
    IMPORT
    CONTINUE
    TYPE
    CONST
    IF
    ENUM
    STRUCT
    PLUS_PLUS
    UMINUS
    MATCH

Terminals, with rules where they appear:

(                    : 38 44
)                    : 38 44
,                    : 7 9
.                    : 47 72 73 74
;                    : 81 82
AND                  : 100 104
AND_ASGN             : 26
AS                   : 
ASSIGN               : 31
BINARY_LIT           : 77
BOOL                 : 50
BREAK                : 
CONST                : 
CONTINUE             : 
DECIMAL_LIT          : 66 72 73 74 74 78
DECL_ASGN            : 6
DIV                  : 102
DIV_ASGN             : 24
ELSE                 : 
ENUM                 : 
EQ                   : 93
EXCLM                : 105
EXPONENT             : 66 67
F32                  : 52
F64                  : 53
FALSE                : 68
FN                   : 
FOR                  : 
GE                   : 88
GT                   : 89
HEX_LIT              : 75
I16                  : 57
I32                  : 56
I64                  : 55
I8                   : 58
IDENTIFIER           : 7 8 42 47 47
IF                   : 
IMPORT               : 
IN                   : 
ISIZE                : 54
LE                   : 90
LOGIC_AND            : 86
LOGIC_OR             : 87
LT                   : 91
MAP                  : 
MATCH                : 
MINUS                : 96 106
MINUS_ASGN           : 29
MINUS_MINUS          : 
MOD                  : 101
MOD_ASGN             : 23
NE                   : 92
NEWL                 : 79 80
OCTAL_LIT            : 76
OR                   : 95
OR_ASGN              : 25
PLUS                 : 97
PLUS_ASGN            : 30
PLUS_PLUS            : 
RETURN               : 
RUNE                 : 51
RUNE_LIT             : 70
SHL                  : 99
SHL_ASGN             : 22
SHR                  : 98
SHR_ASGN             : 21
STAR                 : 103
STAR_ASGN            : 27
STATIC               : 
STRING               : 49
STRING_LIT           : 71
STRUCT               : 
TRUE                 : 69
TYPE                 : 
U16                  : 62
U32                  : 61
U64                  : 60
U8                   : 63
UMINUS               : 
USIZE                : 59
XOR                  : 94
XOR_ASGN             : 28
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear:

ADD_OP               : 84
BINARY_OP            : 32
FLOAT_LIT            : 65 67
INT_LIT              : 64
MUL_OP               : 83
REL_OP               : 85
UNARY_OP             : 34
assign_op            : 20
assignment           : 17
basicLit             : 43
block                : 14
conversion           : 36
declaration          : 4 16
eos                  : 2 3 11 79 81
expression           : 9 10 19 32 38 44
expressionList       : 6 9 20 20
expressionStmt       : 18
identifierList       : 6 7
literal              : 40
numericType          : 48
operand              : 37
operandName          : 39
primaryExpr          : 35
prog                 : 0
qualifiedIdent       : 41 45
simpleStmt           : 15
statement            : 11 12
statementList        : 11 13
topLevelDecl         : 2 3
topLevelDecls        : 1 2
typeName             : 46
type_                : 44
unaryExpr            : 32 33 34
varDecl              : 5


state 0

    (0) S' -> . prog
    (1) prog -> . topLevelDecls
    (2) topLevelDecls -> . topLevelDecls topLevelDecl eos
    (3) topLevelDecls -> . topLevelDecl eos
    (4) topLevelDecl -> . declaration
    (5) declaration -> . varDecl
    (6) varDecl -> . identifierList DECL_ASGN expressionList
    (7) identifierList -> . identifierList , IDENTIFIER
    (8) identifierList -> . IDENTIFIER
    IDENTIFIER      shift and go to state 7

    prog                           shift and go to state 1
    topLevelDecls                  shift and go to state 2
    topLevelDecl                   shift and go to state 3
    declaration                    shift and go to state 4
    varDecl                        shift and go to state 5
    identifierList                 shift and go to state 6

state 1

    (0) S' -> prog .


state 2

    (1) prog -> topLevelDecls .
    (2) topLevelDecls -> topLevelDecls . topLevelDecl eos
    (4) topLevelDecl -> . declaration
    (5) declaration -> . varDecl
    (6) varDecl -> . identifierList DECL_ASGN expressionList
    (7) identifierList -> . identifierList , IDENTIFIER
    (8) identifierList -> . IDENTIFIER
    $end            reduce using rule 1 (prog -> topLevelDecls .)
    IDENTIFIER      shift and go to state 7

    topLevelDecl                   shift and go to state 8
    declaration                    shift and go to state 4
    varDecl                        shift and go to state 5
    identifierList                 shift and go to state 6

state 3

    (3) topLevelDecls -> topLevelDecl . eos
    (79) eos -> . eos NEWL
    (80) eos -> . NEWL
    (81) eos -> . eos ;
    (82) eos -> . ;
    NEWL            shift and go to state 10
    ;               shift and go to state 11

    eos                            shift and go to state 9

state 4

    (4) topLevelDecl -> declaration .
    NEWL            reduce using rule 4 (topLevelDecl -> declaration .)
    ;               reduce using rule 4 (topLevelDecl -> declaration .)


state 5

    (5) declaration -> varDecl .
    NEWL            reduce using rule 5 (declaration -> varDecl .)
    ;               reduce using rule 5 (declaration -> varDecl .)


state 6

    (6) varDecl -> identifierList . DECL_ASGN expressionList
    (7) identifierList -> identifierList . , IDENTIFIER
    DECL_ASGN       shift and go to state 12
    ,               shift and go to state 13


state 7

    (8) identifierList -> IDENTIFIER .
    DECL_ASGN       reduce using rule 8 (identifierList -> IDENTIFIER .)
    ,               reduce using rule 8 (identifierList -> IDENTIFIER .)


state 8

    (2) topLevelDecls -> topLevelDecls topLevelDecl . eos
    (79) eos -> . eos NEWL
    (80) eos -> . NEWL
    (81) eos -> . eos ;
    (82) eos -> . ;
    NEWL            shift and go to state 10
    ;               shift and go to state 11

    eos                            shift and go to state 14

state 9

    (3) topLevelDecls -> topLevelDecl eos .
    (79) eos -> eos . NEWL
    (81) eos -> eos . ;
    IDENTIFIER      reduce using rule 3 (topLevelDecls -> topLevelDecl eos .)
    $end            reduce using rule 3 (topLevelDecls -> topLevelDecl eos .)
    NEWL            shift and go to state 15
    ;               shift and go to state 16


state 10

    (80) eos -> NEWL .
    NEWL            reduce using rule 80 (eos -> NEWL .)
    ;               reduce using rule 80 (eos -> NEWL .)
    IDENTIFIER      reduce using rule 80 (eos -> NEWL .)
    $end            reduce using rule 80 (eos -> NEWL .)


state 11

    (82) eos -> ; .
    NEWL            reduce using rule 82 (eos -> ; .)
    ;               reduce using rule 82 (eos -> ; .)
    IDENTIFIER      reduce using rule 82 (eos -> ; .)
    $end            reduce using rule 82 (eos -> ; .)


state 12

    (6) varDecl -> identifierList DECL_ASGN . expressionList
    (9) expressionList -> . expressionList , expression
    (10) expressionList -> . expression
    (32) expression -> . expression BINARY_OP unaryExpr
    (33) expression -> . unaryExpr
    (34) unaryExpr -> . UNARY_OP unaryExpr
    (35) unaryExpr -> . primaryExpr
    (104) UNARY_OP -> . AND
    (105) UNARY_OP -> . EXCLM
    (106) UNARY_OP -> . MINUS
    (36) primaryExpr -> . conversion
    (37) primaryExpr -> . operand
    (44) conversion -> . type_ ( expression )
    (38) operand -> . ( expression )
    (39) operand -> . operandName
    (40) operand -> . literal
    (45) type_ -> . qualifiedIdent
    (46) type_ -> . typeName
    (41) operandName -> . qualifiedIdent
    (42) operandName -> . IDENTIFIER
    (43) literal -> . basicLit
    (47) qualifiedIdent -> . IDENTIFIER . IDENTIFIER
    (48) typeName -> . numericType
    (49) typeName -> . STRING
    (50) typeName -> . BOOL
    (51) typeName -> . RUNE
    (64) basicLit -> . INT_LIT
    (65) basicLit -> . FLOAT_LIT
    (66) basicLit -> . DECIMAL_LIT EXPONENT
    (67) basicLit -> . FLOAT_LIT EXPONENT
    (68) basicLit -> . FALSE
    (69) basicLit -> . TRUE
    (70) basicLit -> . RUNE_LIT
    (71) basicLit -> . STRING_LIT
    (52) numericType -> . F32
    (53) numericType -> . F64
    (54) numericType -> . ISIZE
    (55) numericType -> . I64
    (56) numericType -> . I32
    (57) numericType -> . I16
    (58) numericType -> . I8
    (59) numericType -> . USIZE
    (60) numericType -> . U64
    (61) numericType -> . U32
    (62) numericType -> . U16
    (63) numericType -> . U8
    (75) INT_LIT -> . HEX_LIT
    (76) INT_LIT -> . OCTAL_LIT
    (77) INT_LIT -> . BINARY_LIT
    (78) INT_LIT -> . DECIMAL_LIT
    (72) FLOAT_LIT -> . . DECIMAL_LIT
    (73) FLOAT_LIT -> . DECIMAL_LIT .
    (74) FLOAT_LIT -> . DECIMAL_LIT . DECIMAL_LIT
    AND             shift and go to state 22
    EXCLM           shift and go to state 23
    MINUS           shift and go to state 24
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33
    STRING          shift and go to state 37
    BOOL            shift and go to state 38
    RUNE            shift and go to state 39
    DECIMAL_LIT     shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44
    RUNE_LIT        shift and go to state 45
    STRING_LIT      shift and go to state 46
    F32             shift and go to state 47
    F64             shift and go to state 48
    ISIZE           shift and go to state 49
    I64             shift and go to state 50
    I32             shift and go to state 51
    I16             shift and go to state 52
    I8              shift and go to state 53
    USIZE           shift and go to state 54
    U64             shift and go to state 55
    U32             shift and go to state 56
    U16             shift and go to state 57
    U8              shift and go to state 58
    HEX_LIT         shift and go to state 59
    OCTAL_LIT       shift and go to state 60
    BINARY_LIT      shift and go to state 61
    .               shift and go to state 35

    expressionList                 shift and go to state 17
    expression                     shift and go to state 18
    unaryExpr                      shift and go to state 19
    UNARY_OP                       shift and go to state 20
    primaryExpr                    shift and go to state 21
    conversion                     shift and go to state 25
    operand                        shift and go to state 26
    type_                          shift and go to state 27
    operandName                    shift and go to state 29
    literal                        shift and go to state 30
    qualifiedIdent                 shift and go to state 31
    typeName                       shift and go to state 32
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 36
    INT_LIT                        shift and go to state 40
    FLOAT_LIT                      shift and go to state 41

state 13

    (7) identifierList -> identifierList , . IDENTIFIER
    IDENTIFIER      shift and go to state 62


state 14

    (2) topLevelDecls -> topLevelDecls topLevelDecl eos .
    (79) eos -> eos . NEWL
    (81) eos -> eos . ;
    IDENTIFIER      reduce using rule 2 (topLevelDecls -> topLevelDecls topLevelDecl eos .)
    $end            reduce using rule 2 (topLevelDecls -> topLevelDecls topLevelDecl eos .)
    NEWL            shift and go to state 15
    ;               shift and go to state 16


state 15

    (79) eos -> eos NEWL .
    NEWL            reduce using rule 79 (eos -> eos NEWL .)
    ;               reduce using rule 79 (eos -> eos NEWL .)
    IDENTIFIER      reduce using rule 79 (eos -> eos NEWL .)
    $end            reduce using rule 79 (eos -> eos NEWL .)


state 16

    (81) eos -> eos ; .
    NEWL            reduce using rule 81 (eos -> eos ; .)
    ;               reduce using rule 81 (eos -> eos ; .)
    IDENTIFIER      reduce using rule 81 (eos -> eos ; .)
    $end            reduce using rule 81 (eos -> eos ; .)


state 17

    (6) varDecl -> identifierList DECL_ASGN expressionList .
    (9) expressionList -> expressionList . , expression
    NEWL            reduce using rule 6 (varDecl -> identifierList DECL_ASGN expressionList .)
    ;               reduce using rule 6 (varDecl -> identifierList DECL_ASGN expressionList .)
    ,               shift and go to state 63


state 18

    (10) expressionList -> expression .
    (32) expression -> expression . BINARY_OP unaryExpr
    (83) BINARY_OP -> . MUL_OP
    (84) BINARY_OP -> . ADD_OP
    (85) BINARY_OP -> . REL_OP
    (86) BINARY_OP -> . LOGIC_AND
    (87) BINARY_OP -> . LOGIC_OR
    (98) MUL_OP -> . SHR
    (99) MUL_OP -> . SHL
    (100) MUL_OP -> . AND
    (101) MUL_OP -> . MOD
    (102) MUL_OP -> . DIV
    (103) MUL_OP -> . STAR
    (94) ADD_OP -> . XOR
    (95) ADD_OP -> . OR
    (96) ADD_OP -> . MINUS
    (97) ADD_OP -> . PLUS
    (88) REL_OP -> . GE
    (89) REL_OP -> . GT
    (90) REL_OP -> . LE
    (91) REL_OP -> . LT
    (92) REL_OP -> . NE
    (93) REL_OP -> . EQ
    ,               reduce using rule 10 (expressionList -> expression .)
    NEWL            reduce using rule 10 (expressionList -> expression .)
    ;               reduce using rule 10 (expressionList -> expression .)
    LOGIC_AND       shift and go to state 68
    LOGIC_OR        shift and go to state 69
    SHR             shift and go to state 70
    SHL             shift and go to state 71
    AND             shift and go to state 72
    MOD             shift and go to state 73
    DIV             shift and go to state 74
    STAR            shift and go to state 75
    XOR             shift and go to state 76
    OR              shift and go to state 77
    MINUS           shift and go to state 78
    PLUS            shift and go to state 79
    GE              shift and go to state 80
    GT              shift and go to state 81
    LE              shift and go to state 82
    LT              shift and go to state 83
    NE              shift and go to state 84
    EQ              shift and go to state 85

    BINARY_OP                      shift and go to state 64
    MUL_OP                         shift and go to state 65
    ADD_OP                         shift and go to state 66
    REL_OP                         shift and go to state 67

state 19

    (33) expression -> unaryExpr .
    LOGIC_AND       reduce using rule 33 (expression -> unaryExpr .)
    LOGIC_OR        reduce using rule 33 (expression -> unaryExpr .)
    SHR             reduce using rule 33 (expression -> unaryExpr .)
    SHL             reduce using rule 33 (expression -> unaryExpr .)
    AND             reduce using rule 33 (expression -> unaryExpr .)
    MOD             reduce using rule 33 (expression -> unaryExpr .)
    DIV             reduce using rule 33 (expression -> unaryExpr .)
    STAR            reduce using rule 33 (expression -> unaryExpr .)
    XOR             reduce using rule 33 (expression -> unaryExpr .)
    OR              reduce using rule 33 (expression -> unaryExpr .)
    MINUS           reduce using rule 33 (expression -> unaryExpr .)
    PLUS            reduce using rule 33 (expression -> unaryExpr .)
    GE              reduce using rule 33 (expression -> unaryExpr .)
    GT              reduce using rule 33 (expression -> unaryExpr .)
    LE              reduce using rule 33 (expression -> unaryExpr .)
    LT              reduce using rule 33 (expression -> unaryExpr .)
    NE              reduce using rule 33 (expression -> unaryExpr .)
    EQ              reduce using rule 33 (expression -> unaryExpr .)
    ,               reduce using rule 33 (expression -> unaryExpr .)
    NEWL            reduce using rule 33 (expression -> unaryExpr .)
    ;               reduce using rule 33 (expression -> unaryExpr .)
    )               reduce using rule 33 (expression -> unaryExpr .)


state 20

    (34) unaryExpr -> UNARY_OP . unaryExpr
    (34) unaryExpr -> . UNARY_OP unaryExpr
    (35) unaryExpr -> . primaryExpr
    (104) UNARY_OP -> . AND
    (105) UNARY_OP -> . EXCLM
    (106) UNARY_OP -> . MINUS
    (36) primaryExpr -> . conversion
    (37) primaryExpr -> . operand
    (44) conversion -> . type_ ( expression )
    (38) operand -> . ( expression )
    (39) operand -> . operandName
    (40) operand -> . literal
    (45) type_ -> . qualifiedIdent
    (46) type_ -> . typeName
    (41) operandName -> . qualifiedIdent
    (42) operandName -> . IDENTIFIER
    (43) literal -> . basicLit
    (47) qualifiedIdent -> . IDENTIFIER . IDENTIFIER
    (48) typeName -> . numericType
    (49) typeName -> . STRING
    (50) typeName -> . BOOL
    (51) typeName -> . RUNE
    (64) basicLit -> . INT_LIT
    (65) basicLit -> . FLOAT_LIT
    (66) basicLit -> . DECIMAL_LIT EXPONENT
    (67) basicLit -> . FLOAT_LIT EXPONENT
    (68) basicLit -> . FALSE
    (69) basicLit -> . TRUE
    (70) basicLit -> . RUNE_LIT
    (71) basicLit -> . STRING_LIT
    (52) numericType -> . F32
    (53) numericType -> . F64
    (54) numericType -> . ISIZE
    (55) numericType -> . I64
    (56) numericType -> . I32
    (57) numericType -> . I16
    (58) numericType -> . I8
    (59) numericType -> . USIZE
    (60) numericType -> . U64
    (61) numericType -> . U32
    (62) numericType -> . U16
    (63) numericType -> . U8
    (75) INT_LIT -> . HEX_LIT
    (76) INT_LIT -> . OCTAL_LIT
    (77) INT_LIT -> . BINARY_LIT
    (78) INT_LIT -> . DECIMAL_LIT
    (72) FLOAT_LIT -> . . DECIMAL_LIT
    (73) FLOAT_LIT -> . DECIMAL_LIT .
    (74) FLOAT_LIT -> . DECIMAL_LIT . DECIMAL_LIT
    AND             shift and go to state 22
    EXCLM           shift and go to state 23
    MINUS           shift and go to state 24
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33
    STRING          shift and go to state 37
    BOOL            shift and go to state 38
    RUNE            shift and go to state 39
    DECIMAL_LIT     shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44
    RUNE_LIT        shift and go to state 45
    STRING_LIT      shift and go to state 46
    F32             shift and go to state 47
    F64             shift and go to state 48
    ISIZE           shift and go to state 49
    I64             shift and go to state 50
    I32             shift and go to state 51
    I16             shift and go to state 52
    I8              shift and go to state 53
    USIZE           shift and go to state 54
    U64             shift and go to state 55
    U32             shift and go to state 56
    U16             shift and go to state 57
    U8              shift and go to state 58
    HEX_LIT         shift and go to state 59
    OCTAL_LIT       shift and go to state 60
    BINARY_LIT      shift and go to state 61
    .               shift and go to state 35

    UNARY_OP                       shift and go to state 20
    unaryExpr                      shift and go to state 86
    primaryExpr                    shift and go to state 21
    conversion                     shift and go to state 25
    operand                        shift and go to state 26
    type_                          shift and go to state 27
    operandName                    shift and go to state 29
    literal                        shift and go to state 30
    qualifiedIdent                 shift and go to state 31
    typeName                       shift and go to state 32
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 36
    INT_LIT                        shift and go to state 40
    FLOAT_LIT                      shift and go to state 41

state 21

    (35) unaryExpr -> primaryExpr .
    LOGIC_AND       reduce using rule 35 (unaryExpr -> primaryExpr .)
    LOGIC_OR        reduce using rule 35 (unaryExpr -> primaryExpr .)
    SHR             reduce using rule 35 (unaryExpr -> primaryExpr .)
    SHL             reduce using rule 35 (unaryExpr -> primaryExpr .)
    AND             reduce using rule 35 (unaryExpr -> primaryExpr .)
    MOD             reduce using rule 35 (unaryExpr -> primaryExpr .)
    DIV             reduce using rule 35 (unaryExpr -> primaryExpr .)
    STAR            reduce using rule 35 (unaryExpr -> primaryExpr .)
    XOR             reduce using rule 35 (unaryExpr -> primaryExpr .)
    OR              reduce using rule 35 (unaryExpr -> primaryExpr .)
    MINUS           reduce using rule 35 (unaryExpr -> primaryExpr .)
    PLUS            reduce using rule 35 (unaryExpr -> primaryExpr .)
    GE              reduce using rule 35 (unaryExpr -> primaryExpr .)
    GT              reduce using rule 35 (unaryExpr -> primaryExpr .)
    LE              reduce using rule 35 (unaryExpr -> primaryExpr .)
    LT              reduce using rule 35 (unaryExpr -> primaryExpr .)
    NE              reduce using rule 35 (unaryExpr -> primaryExpr .)
    EQ              reduce using rule 35 (unaryExpr -> primaryExpr .)
    ,               reduce using rule 35 (unaryExpr -> primaryExpr .)
    NEWL            reduce using rule 35 (unaryExpr -> primaryExpr .)
    ;               reduce using rule 35 (unaryExpr -> primaryExpr .)
    )               reduce using rule 35 (unaryExpr -> primaryExpr .)


state 22

    (104) UNARY_OP -> AND .
    AND             reduce using rule 104 (UNARY_OP -> AND .)
    EXCLM           reduce using rule 104 (UNARY_OP -> AND .)
    MINUS           reduce using rule 104 (UNARY_OP -> AND .)
    (               reduce using rule 104 (UNARY_OP -> AND .)
    IDENTIFIER      reduce using rule 104 (UNARY_OP -> AND .)
    STRING          reduce using rule 104 (UNARY_OP -> AND .)
    BOOL            reduce using rule 104 (UNARY_OP -> AND .)
    RUNE            reduce using rule 104 (UNARY_OP -> AND .)
    DECIMAL_LIT     reduce using rule 104 (UNARY_OP -> AND .)
    FALSE           reduce using rule 104 (UNARY_OP -> AND .)
    TRUE            reduce using rule 104 (UNARY_OP -> AND .)
    RUNE_LIT        reduce using rule 104 (UNARY_OP -> AND .)
    STRING_LIT      reduce using rule 104 (UNARY_OP -> AND .)
    F32             reduce using rule 104 (UNARY_OP -> AND .)
    F64             reduce using rule 104 (UNARY_OP -> AND .)
    ISIZE           reduce using rule 104 (UNARY_OP -> AND .)
    I64             reduce using rule 104 (UNARY_OP -> AND .)
    I32             reduce using rule 104 (UNARY_OP -> AND .)
    I16             reduce using rule 104 (UNARY_OP -> AND .)
    I8              reduce using rule 104 (UNARY_OP -> AND .)
    USIZE           reduce using rule 104 (UNARY_OP -> AND .)
    U64             reduce using rule 104 (UNARY_OP -> AND .)
    U32             reduce using rule 104 (UNARY_OP -> AND .)
    U16             reduce using rule 104 (UNARY_OP -> AND .)
    U8              reduce using rule 104 (UNARY_OP -> AND .)
    HEX_LIT         reduce using rule 104 (UNARY_OP -> AND .)
    OCTAL_LIT       reduce using rule 104 (UNARY_OP -> AND .)
    BINARY_LIT      reduce using rule 104 (UNARY_OP -> AND .)
    .               reduce using rule 104 (UNARY_OP -> AND .)


state 23

    (105) UNARY_OP -> EXCLM .
    AND             reduce using rule 105 (UNARY_OP -> EXCLM .)
    EXCLM           reduce using rule 105 (UNARY_OP -> EXCLM .)
    MINUS           reduce using rule 105 (UNARY_OP -> EXCLM .)
    (               reduce using rule 105 (UNARY_OP -> EXCLM .)
    IDENTIFIER      reduce using rule 105 (UNARY_OP -> EXCLM .)
    STRING          reduce using rule 105 (UNARY_OP -> EXCLM .)
    BOOL            reduce using rule 105 (UNARY_OP -> EXCLM .)
    RUNE            reduce using rule 105 (UNARY_OP -> EXCLM .)
    DECIMAL_LIT     reduce using rule 105 (UNARY_OP -> EXCLM .)
    FALSE           reduce using rule 105 (UNARY_OP -> EXCLM .)
    TRUE            reduce using rule 105 (UNARY_OP -> EXCLM .)
    RUNE_LIT        reduce using rule 105 (UNARY_OP -> EXCLM .)
    STRING_LIT      reduce using rule 105 (UNARY_OP -> EXCLM .)
    F32             reduce using rule 105 (UNARY_OP -> EXCLM .)
    F64             reduce using rule 105 (UNARY_OP -> EXCLM .)
    ISIZE           reduce using rule 105 (UNARY_OP -> EXCLM .)
    I64             reduce using rule 105 (UNARY_OP -> EXCLM .)
    I32             reduce using rule 105 (UNARY_OP -> EXCLM .)
    I16             reduce using rule 105 (UNARY_OP -> EXCLM .)
    I8              reduce using rule 105 (UNARY_OP -> EXCLM .)
    USIZE           reduce using rule 105 (UNARY_OP -> EXCLM .)
    U64             reduce using rule 105 (UNARY_OP -> EXCLM .)
    U32             reduce using rule 105 (UNARY_OP -> EXCLM .)
    U16             reduce using rule 105 (UNARY_OP -> EXCLM .)
    U8              reduce using rule 105 (UNARY_OP -> EXCLM .)
    HEX_LIT         reduce using rule 105 (UNARY_OP -> EXCLM .)
    OCTAL_LIT       reduce using rule 105 (UNARY_OP -> EXCLM .)
    BINARY_LIT      reduce using rule 105 (UNARY_OP -> EXCLM .)
    .               reduce using rule 105 (UNARY_OP -> EXCLM .)


state 24

    (106) UNARY_OP -> MINUS .
    AND             reduce using rule 106 (UNARY_OP -> MINUS .)
    EXCLM           reduce using rule 106 (UNARY_OP -> MINUS .)
    MINUS           reduce using rule 106 (UNARY_OP -> MINUS .)
    (               reduce using rule 106 (UNARY_OP -> MINUS .)
    IDENTIFIER      reduce using rule 106 (UNARY_OP -> MINUS .)
    STRING          reduce using rule 106 (UNARY_OP -> MINUS .)
    BOOL            reduce using rule 106 (UNARY_OP -> MINUS .)
    RUNE            reduce using rule 106 (UNARY_OP -> MINUS .)
    DECIMAL_LIT     reduce using rule 106 (UNARY_OP -> MINUS .)
    FALSE           reduce using rule 106 (UNARY_OP -> MINUS .)
    TRUE            reduce using rule 106 (UNARY_OP -> MINUS .)
    RUNE_LIT        reduce using rule 106 (UNARY_OP -> MINUS .)
    STRING_LIT      reduce using rule 106 (UNARY_OP -> MINUS .)
    F32             reduce using rule 106 (UNARY_OP -> MINUS .)
    F64             reduce using rule 106 (UNARY_OP -> MINUS .)
    ISIZE           reduce using rule 106 (UNARY_OP -> MINUS .)
    I64             reduce using rule 106 (UNARY_OP -> MINUS .)
    I32             reduce using rule 106 (UNARY_OP -> MINUS .)
    I16             reduce using rule 106 (UNARY_OP -> MINUS .)
    I8              reduce using rule 106 (UNARY_OP -> MINUS .)
    USIZE           reduce using rule 106 (UNARY_OP -> MINUS .)
    U64             reduce using rule 106 (UNARY_OP -> MINUS .)
    U32             reduce using rule 106 (UNARY_OP -> MINUS .)
    U16             reduce using rule 106 (UNARY_OP -> MINUS .)
    U8              reduce using rule 106 (UNARY_OP -> MINUS .)
    HEX_LIT         reduce using rule 106 (UNARY_OP -> MINUS .)
    OCTAL_LIT       reduce using rule 106 (UNARY_OP -> MINUS .)
    BINARY_LIT      reduce using rule 106 (UNARY_OP -> MINUS .)
    .               reduce using rule 106 (UNARY_OP -> MINUS .)


state 25
